--- a/.github/workflows/debian-packages.yml
+++ b/.github/workflows/debian-packages.yml
@@ -82,6 +82,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: recursive
+        token: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Setup build environment
       run: |
