--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -13,8 +13,7 @@ env:
 jobs:
   test:
     name: Test ROS2 ${{ matrix.ros_distro }}
-    runs-on: ubuntu-latest
-    container: ros:${{ matrix.ros_distro }}-ros-base-${{ matrix.ubuntu_distro }}
+    runs-on: ubuntu-${{ matrix.ubuntu_distro }}
     
     strategy:
       fail-fast: false
@@ -38,10 +37,14 @@ jobs:
         submodules: recursive
         token: ${{ secrets.GITHUB_TOKEN }}
         
-    - name: Setup ROS environment
+    - name: Setup ROS2 ${{ matrix.ros_distro }}
+      uses: ros-tooling/setup-ros@v0.7
+      with:
+        required-ros-distributions: ${{ matrix.ros_distro }}
+        
+    - name: Install build dependencies
       run: |
-        source /opt/ros/${{ matrix.ros_distro }}/setup.bash
-        apt-get update -qq && apt-get install -y build-essential python3-pip
+        sudo apt-get update -qq && sudo apt-get install -y build-essential python3-pip
         
     - name: Install Python dependencies
       run: |
