--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -38,8 +38,9 @@ jobs:
 
   smoke-test:
     name: Smoke test ROS2 ${{ matrix.ros_distro }}
-    runs-on: ubuntu-${{ matrix.ubuntu_distro }}
+    runs-on: ubuntu-latest
     needs: [determine-distros]
+    container: ghcr.io/ros/ros:${{ matrix.ros_distro }}-ros-base-${{ matrix.ubuntu_distro }}
     
     strategy:
       fail-fast: false
@@ -58,14 +59,9 @@ jobs:
             ubuntu_distro: noble
     
     steps:
-    - name: Setup ROS2 ${{ matrix.ros_distro }}
-      uses: ros-tooling/setup-ros@v0.7
-      with:
-        required-ros-distributions: ${{ matrix.ros_distro }}
-        
     - name: Setup environment
       run: |
-        sudo apt-get update -qq
+        apt-get update -qq
         
     - name: Download Debian packages
       uses: actions/download-artifact@v4
@@ -80,13 +76,13 @@ jobs:
         ls -la debian_packages/${{ matrix.ros_distro }}/
         
         # Install the debian packages
-        sudo apt-get install -y ./debian_packages/${{ matrix.ros_distro }}/ros-${{ matrix.ros_distro }}-greenwave-monitor-interfaces_*.deb ./debian_packages/${{ matrix.ros_distro }}/ros-${{ matrix.ros_distro }}-greenwave-monitor_*.deb ./debian_packages/${{ matrix.ros_distro }}/ros-${{ matrix.ros_distro }}-r2s-gw_*.deb
+        apt-get install -y ./debian_packages/${{ matrix.ros_distro }}/ros-${{ matrix.ros_distro }}-greenwave-monitor-interfaces_*.deb ./debian_packages/${{ matrix.ros_distro }}/ros-${{ matrix.ros_distro }}-greenwave-monitor_*.deb ./debian_packages/${{ matrix.ros_distro }}/ros-${{ matrix.ros_distro }}-r2s-gw_*.deb
         
         # Verify packages are installed
         dpkg -s ros-${{ matrix.ros_distro }}-r2s-gw ros-${{ matrix.ros_distro }}-greenwave-monitor ros-${{ matrix.ros_distro }}-greenwave-monitor-interfaces
         
         # Install Python dependencies
-        sudo apt-get install -y python3-pip || true
+        apt-get install -y python3-pip || true
         if [[ "${{ matrix.ros_distro }}" == "jazzy" || \
               "${{ matrix.ros_distro }}" == "kilted" || \
               "${{ matrix.ros_distro }}" == "rolling" ]]; then
