--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -14,7 +14,7 @@ jobs:
   test:
     name: Test ROS2 ${{ matrix.ros_distro }}
     runs-on: ubuntu-latest
-    container: ghcr.io/ros/ros:${{ matrix.ros_distro }}-ros-base-${{ matrix.ubuntu_distro }}
+    container: ros:${{ matrix.ros_distro }}-ros-base-${{ matrix.ubuntu_distro }}
     
     strategy:
       fail-fast: false
