--- a/.github/workflows/debian-packages.yml
+++ b/.github/workflows/debian-packages.yml
@@ -59,7 +59,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [determine-distros]
     if: always() && (needs.check-tests.result == 'success' || needs.check-tests.result == 'skipped')
-    container: ros:${{ matrix.ros_distro }}-ros-base-${{ matrix.ubuntu_distro }}
+    container:
+      image: ros:${{ matrix.ros_distro }}-ros-base-${{ matrix.ubuntu_distro }}
+      credentials:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     
     strategy:
       fail-fast: false
@@ -78,12 +82,6 @@ jobs:
             ubuntu_distro: noble
     
     steps:
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-        
     - name: Checkout code
       uses: actions/checkout@v4
       with:
