--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -40,7 +40,11 @@ jobs:
     name: Smoke test ROS2 ${{ matrix.ros_distro }}
     runs-on: ubuntu-latest
     needs: [determine-distros]
-    container: ros:${{ matrix.ros_distro }}-ros-base-${{ matrix.ubuntu_distro }}
+    container:
+      image: ros:${{ matrix.ros_distro }}-ros-base-${{ matrix.ubuntu_distro }}
+      credentials:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     
     strategy:
       fail-fast: false
@@ -59,12 +63,6 @@ jobs:
             ubuntu_distro: noble
     
     steps:
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-        
     - name: Setup environment
       run: |
         apt-get update -qq
