--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -54,6 +54,7 @@ jobs:
         else
           pip3 install -r requirements.txt
         fi
+      shell: bash
         
     - name: Build packages
       run: |
