--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -1,6 +1,9 @@
 name: Smoke Tests
 
 on:
+  pull_request:
+    branches: [ main ]
+    types: [ opened, synchronize, reopened, ready_for_review ]
   workflow_run:
     workflows: ["Generate Debian Packages"]
     types: [completed]
@@ -18,7 +21,7 @@ env:
 jobs:
   determine-distros:
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch'
+    if: github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' || github.event_name == 'pull_request'
     outputs:
       distros: ${{ steps.set-distros.outputs.distros }}
     steps:
