--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -72,17 +72,13 @@ jobs:
       if: always()
       with:
         name: test-results-${{ matrix.ros_distro }}
-        path: |
-          build/*/test_results/**/*.xml
-          log/latest_test/**/*.xml
-          log/*/test_results/**/*.xml
+        path: build/*/test_results/**/*.xml
         retention-days: 7
-        
+
     - name: Publish test results
       uses: EnricoMi/publish-unit-test-result-action@v2
       if: always()
       with:
-        files: |
-          build/*/test_results/*/*.xml
-          log/*/test_results/*/*.xml
+        files: build/*/test_results/*/*.xml
         check_name: "Test Results (${{ matrix.ros_distro }})"
+        report_individual_runs: true
