fix CI to not depend on textual

--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -17,7 +17,7 @@ jobs:
       credentials:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    
+
     strategy:
       fail-fast: false
       matrix:
@@ -32,41 +32,41 @@ jobs:
             ubuntu_distro: noble
           - ros_distro: rolling
             ubuntu_distro: noble
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-        
+
     - name: Setup ROS environment
       run: |
         source /opt/ros/${{ matrix.ros_distro }}/setup.bash
         apt-get update -qq && apt-get install -y build-essential python3-pip
       shell: bash
-        
+
     - name: Install Python dependencies
       run: |
         if [[ "${{ matrix.ros_distro }}" == "jazzy" || \
               "${{ matrix.ros_distro }}" == "kilted" || \
               "${{ matrix.ros_distro }}" == "rolling" ]]; then
-          pip3 install --break-system-packages -I pygments -r requirements.txt
+          pip3 install --break-system-packages -I pygments textual
         else
-          pip3 install -r requirements.txt
+          pip3 install textual
         fi
       shell: bash
-        
+
     - name: Build packages
       run: |
         source /opt/ros/${{ matrix.ros_distro }}/setup.bash
         echo "Building and testing on ROS2 ${{ matrix.ros_distro }}"
         colcon build --packages-up-to r2s_gw
       shell: bash
-        
+
     - name: Run tests
       run: |
         source /opt/ros/${{ matrix.ros_distro }}/setup.bash
         colcon test --event-handlers console_direct+ --return-code-on-test-failure --packages-up-to r2s_gw
       shell: bash
-        
+
     - name: Upload test results
       uses: actions/upload-artifact@v4
       if: always()
