--- a/greenwave_monitor/package.xml
+++ b/greenwave_monitor/package.xml
@@ -25,7 +25,7 @@
   <description>A ROS 2 diagnostic tool for monitoring topic frame rates and latency metrics.</description>
   <maintainer email="sgillen@nvidia.com">Sean Gillen</maintainer>
   <author email="sgillen@nvidia.com">Sean Gillen</author>
-  <auhtor email="liann@nvidia.com">Ann Li</author>
+  <author email="liann@nvidia.com">Ann Li</author>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
