--- a/greenwave_monitor/package.xml
+++ b/greenwave_monitor/package.xml
@@ -24,8 +24,7 @@
   <version>0.1.0</version>
   <description>A ROS 2 diagnostic tool for monitoring topic frame rates and latency metrics.</description>
   <maintainer email="sgillen@nvidia.com">Sean Gillen</maintainer>
-  <author email="sgillen@nvidia.com">Sean Gillen</author>
-  <author email="liann@nvidia.com">Ann Li</author>
+  <author> Sean Gillen/sgillen@nvidia.com, Ann Li/liann@nvidia.com></author>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
