Update package.xml to add authors tag (#9)

--- a/greenwave_monitor/package.xml
+++ b/greenwave_monitor/package.xml
@@ -25,6 +25,7 @@
   <description>A ROS 2 diagnostic tool for monitoring topic frame rates and latency metrics.</description>
   <maintainer email="sgillen@nvidia.com">Sean Gillen</maintainer>
   <license>Apache-2.0</license>
+  <author>Sean Gillen/sgillen@nvidia.com, Ann Li/liann@nvidia.com></author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>ament_cmake_python</buildtool_depend>
