--- a/greenwave_monitor_interfaces/package.xml
+++ b/greenwave_monitor_interfaces/package.xml
@@ -6,6 +6,7 @@
   <description>Interfaces for the greenwave_monitor package</description>
   <maintainer email="sgillen@nvidia.com">Sean Gillen</maintainer>
   <license>Apache-2.0</license>
+  <author>Sean Gillen/sgillen@nvidia.com, Ann Li/liann@nvidia.com></author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <build_depend>rosidl_default_generators</build_depend>
