add roscore to smoke tests

--- a/.github/workflows/debian-packages.yml
+++ b/.github/workflows/debian-packages.yml
@@ -120,13 +120,16 @@ jobs:
             ubuntu_distro: noble
 
     steps:
-    - name: Setup ROS repository
+    - name: Setup ROS repository and install base ROS
       run: |
         apt-get update -qq
         apt-get install -y curl gnupg lsb-release
         curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
         echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" > /etc/apt/sources.list.d/ros2.list
         apt-get update -qq
+
+        # Install minimal ROS to get /opt/ros and basic infrastructure
+        apt-get install -y ros-${{ matrix.ros_distro }}-ros-core
       shell: bash
       env:
         DEBIAN_FRONTEND: noninteractive
@@ -143,7 +146,7 @@ jobs:
         echo "Smoke testing install on ROS2 ${{ matrix.ros_distro }}"
         ls -la debian_packages/${{ matrix.ros_distro }}/
 
-        # Install the debian packages (apt will pull in ROS dependencies automatically)
+        # Install the debian packages on top of ros-core
         apt-get install -y ./debian_packages/${{ matrix.ros_distro }}/ros-${{ matrix.ros_distro }}-greenwave-monitor-interfaces_*.deb ./debian_packages/${{ matrix.ros_distro }}/ros-${{ matrix.ros_distro }}-greenwave-monitor_*.deb ./debian_packages/${{ matrix.ros_distro }}/ros-${{ matrix.ros_distro }}-r2s-gw_*.deb
 
         # Verify packages are installed
