add timezone config

--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -53,6 +53,10 @@ jobs:
 
     - name: Setup ROS repository and install rosdep
       run: |
+        export DEBIAN_FRONTEND=noninteractive
+        export TZ=Etc/UTC
+        ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
         apt-get update -qq
         apt-get install -y curl gnupg lsb-release
         curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
