--- a/.github/workflows/debian-packages.yml
+++ b/.github/workflows/debian-packages.yml
@@ -122,6 +122,10 @@ jobs:
     steps:
     - name: Setup ROS repository and install base ROS
       run: |
+        export DEBIAN_FRONTEND=noninteractive
+        export TZ=Etc/UTC
+        ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
         apt-get update -qq
         apt-get install -y curl gnupg lsb-release
         curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
