PoC YAML registry

--- a/greenwave_monitor/CMakeLists.txt
+++ b/greenwave_monitor/CMakeLists.txt
@@ -35,6 +35,7 @@ ament_target_dependencies(greenwave_monitor
   std_msgs
   diagnostic_msgs
   greenwave_monitor_interfaces
+  yaml_cpp_vendor
 )
 target_link_libraries(greenwave_monitor message_diagnostics)
 
